--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
-}
+body {
+    background-color: #FFFBEB;
+    }
+    
+    nav{
+    background-color: #FFDDD2;
+    display: flex;
+    justify-content: center;
+    padding: 15px;
+    }
+    .link{
+    padding: 10px 40px;
+    text-decoration: none;
+    color: #3C2317;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    }
+    img{
+        border-radius: 25%;
+    }
+    
+    .products {
+    display: flex;
+    flex-wrap: wrap;
+    }
+    
+    .product-card {
+    padding: 2%;
+    flex-grow: 1;
+    flex-basis: 16%;
+    }
+    
+    .cont {
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+    }
+    
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+    
+    
+    h3, h4 {
+    font-family: 'Montserrat', sans-serif;
+    color: #3C2317;
+    text-align: center;
+    }
+    
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+    h1{
+    padding: 20px;
+    font-size: 3rem;
+    color: #3C2317;
+    font-family: 'Montserrat', sans-serif;
+    margin-left: 8%;
+    margin-top: 5%;
+    }
+    p{
+    width: 50%;
+    margin-left: 25%;
+    color: #3C2317;
+    font-size: 18px;
+    font-family: 'Montserrat', sans-serif;
+    }
+    .center{
+    color: #3C2317;
+    display: flex;
+    margin-left: 10%;
+    }
+    @media all and (max-width: 800px){
+        img{
+            width: 320px;
+            height: 250px;
+        }
+        p{
+            font-size: 10px;
+            width: 70%;
+        }
+        h1{
+            padding: 10px;
+            font-size: 2rem;
+            margin-top: 2%;
+            }
+        h3{
+            font-size: 12px;
+        }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+    }
